Ultimos cambios , fondo genial :), tabla de autos , navbar funcionando

--- a/src/css/Formulario.css
+++ b/src/css/Formulario.css
@@ -7,3 +7,11 @@
     padding: 20px;
 }
 
+.formularioUsuario{
+    background-color: aliceblue;
+    padding: 20px;
+}
+
+.titulo{
+    background-color: aliceblue;
+}
