--- a/src/css/Anya.css
+++ b/src/css/Anya.css
@@ -1,12 +1,12 @@
-/*  div{
-    background-image: url("../assets/img/giphy.gif");
+body{
+    background-image: url("../assets/img/Tran.gif"); 
     background-repeat: no-repeat;
     background-position: center;
     background-size: 100% 100%;
-} */
-body{
+} 
+/* body{
     background: linear-gradient(to bottom left, cyan 50%, palegoldenrod 50%);
-}
+} */
 a{
     color: aliceblue;
 }
@@ -21,7 +21,6 @@ img{
 
 h1{
     color: black;
-    text-decoration: underline;
     letter-spacing: 5px;
     animation-duration: 3s;
     animation-name: slidein;
